--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ header {
   font-size: 18px;
 }
 
-.header-button {
+.button {
   display: flex;
   flex-direction: row;
   justify-content: center;
